[gd_scene load_steps=4 format=3 uid="uid://ckpwvkeql8lki"]

[ext_resource type="Script" path="res://Assets/Scenes/Lobby/LobbyItem.gd" id="1_vj86x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_422ta"]
resource_local_to_scene = true
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color(0.176471, 0.176471, 0.176471, 0.615686)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8khp8"]
resource_local_to_scene = true
content_margin_left = 5.0
content_margin_top = 0.0
content_margin_right = 5.0
content_margin_bottom = 0.0
bg_color = Color(0.314316, 0.314316, 0.314316, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="PanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(0, 50)
offset_left = 10.0
offset_right = 1910.0
offset_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 0
focus_mode = 2
script = ExtResource("1_vj86x")
unselected = SubResource("StyleBoxFlat_422ta")
selected = SubResource("StyleBoxFlat_8khp8")

[node name="LobbyItem" type="VBoxContainer" parent="."]
layout_mode = 2
focus_mode = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Line1" type="HBoxContainer" parent="LobbyItem"]
layout_mode = 2
focus_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="LobbyItem/Line1"]
layout_mode = 2
size_flags_horizontal = 2
text = "local server"

[node name="Label2" type="Label" parent="LobbyItem/Line1"]
layout_mode = 2
size_flags_horizontal = 8
text = "pinging"

[node name="Line2" type="HBoxContainer" parent="LobbyItem"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Control" type="Control" parent="LobbyItem/Line2"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2

[node name="Label3" type="RichTextLabel" parent="LobbyItem/Line2"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
bbcode_enabled = true
scroll_active = false

[node name="HTTPRequest" type="HTTPRequest" parent="."]
timeout = 10.0

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="ping_complete" from="." to="." method="_on_ping_complete"]
[connection signal="ping_fail" from="." to="." method="_on_ping_fail"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_completed"]
